[package]
name = "webpush"
version = "0.1.0"
authors = ["Andrew Osmond <aosmond@gmail.com>"]

[dependencies]
hyper = "0.10.0"
hyper-native-tls = "0.2.2"
libc = "0.2.7"
openssl = "0.9.10"
openssl-sys = "0.9.10"
rand = "0.3"
rust-crypto = "0.2.34"
rustc-serialize = "0.3"

[replace]
"openssl:0.9.10" = { git = "https://github.com/aosmond/rust-openssl", branch = "add_evp_pkey_derive" }
"openssl-sys:0.9.10" = { git = "https://github.com/aosmond/rust-openssl", branch = "add_evp_pkey_derive" }
